﻿Revision history for {{$dist->name}}

{{$NEXT}}

0.04000000 2013-09-05T08:17:38Z
 [!Major and API breaking Changes]
 - no_fallback deprecated in favour of fallback = 0/1
 - reimplemented in terms of a proper Moose class and ::Role::Bootstrap

 [!Minor]
 - add metapod and related info

 [Dependencies::Added / runtime requires]
 - Dist::Zilla::Role::Bootstrap
 - Moose

 [Dependencies::Added / test requires]
 - Cwd
 - Path::Tiny

 [Dependencies::Removed / runtime requires]
 - Cwd
 - Moo::HandleMoose::FakeMetaClass
 - Path::Tiny
 - Role::Tiny
 - lib

0.03000200 2013-09-03T03:36:10Z
 [!Minor]
 - Add tests
 - Minor refactor

 [Dependencies::Added / test requires]
 - Dist::Zilla
 - File::Copy::Recursive
 - Path::FindDev

0.03000101 2013-08-31T01:52:46Z
 [Bugfix]
 - accidental typo with boostrap_dir instead of bootstrap_dir

0.03000100 2013-08-31T01:43:36Z
 [!Minor]
 - Now shows config in metaconfig with a bit of Moo wizzardry.

 [Dependencies::Added / runtime requires]
 - Moo::HandleMoose::FakeMetaClass
 - Role::Tiny

0.03000000 2013-08-30T23:46:07Z
 [!Major]
 - Less noisy in general usage.
 - Now warns if paths that would be boostraped contain modules that are
   already loaded in %INC ( closes gh #1 )
 - Tests regenerated with newer tools

 [Dependencies::Added / develop requires]
 - Test::CPAN::Changes 0.19
 - Test::Kwalitee 1.08

 [Dependencies::Added / runtime requires]
 - lib

 [Dependencies::Added / test requires]
 - IO::Handle
 - IPC::Open3

 [Dependencies::Changed / build requires]
 - Module::Build 0.4004 → 0.4007

 [Dependencies::Changed / configure requires]
 - Module::Build 0.4004 → 0.4007

 [Dependencies::Changed / develop suggests]
 - Dist::Zilla::PluginBundle::Author::KENTNL v1.7.2 → v1.8.3

 [Dependencies::Removed / test requires]
 - File::Find
 - File::Temp

0.02000100 2013-04-06T09:53:45Z
 [Bugs]
 - 2 fallback conditions were accidentally using the same logic, so only
   one would ever work.