@@ -18,7 +18,3 @@ twitter_hash_tags = #perl #cpan
 ;version_rel_day   = 17
 ;version_rel_hour  = 3
 ;version_rel_time_zone = Pacific/Auckland
-
-
-[Prereqs / TestRequires ]
-Dist::Zilla = 0
