@@ -6,20 +6,30 @@ use Path::FindDev qw( find_dev );
 use Path::Tiny;
 use Cwd qw( cwd );
 use File::Copy::Recursive qw( rcopy );
+use Test::DZil;
+use Test::Fatal;
 
-my $source  = find_dev('./')->child('corpus')->child('fake_dist_05');
+my $dist = 'fake_dist_05';
+
+my $source  = find_dev('./')->child('corpus')->child($dist);
 my $tempdir = Path::Tiny->tempdir;
 
 rcopy( "$source", "$tempdir" );
 
 BAIL_OUT("test setup failed to copy to tempdir") if not -e -f $tempdir->child("dist.ini");
 
-my $cwd = cwd();
-chdir "$tempdir";
-
-is( system( "dzil", "build" ), 0, "dzil building a no-fallback dist a second time is ok" );
-
-chdir $cwd;
+is(
+  exception {
+    my $builder = Builder->from_config(
+      {
+        dist_root => "$tempdir"
+      }
+    );
+    $builder->build;
+  },
+  undef,
+  'can build dist ' . $dist
+);
 
 done_testing;
 
