@@ -1,6 +1,16 @@
 ﻿Revision history for {{$dist->name}}
 
 {{$NEXT}}
+ [Bugfix]
+ - Attempt to solve the problem of CPAN Smokers not having dzil in path by using Test::DZil instead.
+
+ [Dependencies::Added / test requires]
+ - File::Spec
+ - Test::DZil
+ - Test::Fatal
+
+ [Dependencies::Removed / test requires]
+ - Dist::Zilla
 
 0.04000000 2013-09-05T08:17:38Z
  [!Major and API breaking Changes]
